--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,6 @@
 {
   "hosting": {
-    "public": "build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+    "site": "frontend-heros",
+    "public": "public"
   }
 }
