--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,10 @@
 {
   "hosting": {
-    "site": "frontend-heros",
-    "public": "public"
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
 }
